--- a/app/views/layouts/_nikolaj.html.haml
+++ b/app/views/layouts/_nikolaj.html.haml
@@ -1,5 +1,5 @@
 .heading.ui-draggable-handle
-  .left.text-left PROGRAMME
+  .float-left.text-left PROGRAMME
   .text-right MAY-JUL 2016
 .title_box.text-center
   .title= link_to 'HYBRID MATTERs at Nikolaj Kunsthal', '/nikolaj'
