--- a/app/views/layouts/symposium.html.haml
+++ b/app/views/layouts/symposium.html.haml
@@ -23,7 +23,7 @@
   %body
     - unless flash.empty?
       #flash
-        .row
+        .row.expanded
           .small-12.columns.text-center
             - flash.each do |name, msg|
               - if msg.is_a?(String)
@@ -55,7 +55,7 @@
 
       %nav.top-bar.sticky
         .hor-container
-          .row
+          .row.expanded
       
             .menu_wrapper
               .social.hide-for-small-only
@@ -63,7 +63,7 @@
                 = link_to image_tag('icon_twitter.png', onmouseover: "this.src='#{image_path('icon_twitter_hover.png')}'", onmouseout: "this.src='#{image_path('icon_twitter.png')}'"), 'http://twitter.com/hybridmatters', target: :_blank, class: :twitter_link
                 = link_to image_tag('icon_post.png', onmouseover: "this.src='#{image_path('icon_post_hover.png')}'", onmouseout: "this.src='#{image_path('icon_post.png')}'"), 'mailto:info@bioartsociety.fi', class: :maillink
               .rest
-                .row.show-for-small-only
+                .row.expanded.show-for-small-only
                   .small-6.columns.small-offset-1
                     = render partial: 'layouts/dropdown'
 
@@ -77,7 +77,7 @@
                       -#%option{selected: (controller.controller_name == 'events' ? :selected : false), value: events_path} Events
                       %option{selected: (controller.controller_name == 'pages' && params[:id] == 'activities'  ? :selected : false), value: page_path('activities')} Activities      
                               
-                %ul.top-bar-menu.hide-for-small-only
+                %ul.top-bar-menu.hide-for-small-only.horizontal.menu
 
                   = render partial: 'layouts/dropdown'
                   %li.statement{class: controller.controller_name == 'pages' ? (@page.slug == 'hybrid-matters-symposium' ? :active : false) : false}= link_to 'Statement', page_path('statement')
@@ -86,11 +86,11 @@
                   %li{class: controller.controller_name == 'participants' ? :active : false}= link_to 'Speakers', '/speakers'
                   %li{class: controller.controller_name == 'posts' ? :active : false}= link_to 'Blog', posts_path
                   
-          .row.hide-for-small-only
+          .row.expanded.hide-for-small-only
             .down_arrow_wrapper
               .social &nbsp;
               .rest
-                %ul.top-bar-menu
+                %ul.top-bar-menu.horizontal.menu
                   .together
                     %li.select_menu
                       %span
@@ -111,7 +111,7 @@
       
                 
     .symposium_box.show-for-small-only
-      .row
+      .row.expanded
         .small-10.columns.text-center.small-centered.small-offset-1
           The HYBRID MATTERs Symposium (24-25 November in Helsinki) will
           address core ideas and findings of the HYBRID MATTERs programme.
