--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -24,6 +24,9 @@
   .body {
     margin: 2rem 0 0.8rem 0;
   }
+  .logo {
+    padding-left: 0;
+  }
   .body, .body p {
     font-size: 0.9rem;
     line-height: 1.4rem;
@@ -118,12 +121,19 @@
 }
 .slick-prev {
   left: -3rem;
+  position: absolute;
 }
 
 .slick-next {
-  right: -4rem;
+  right: -3rem;
+  position: absolute;
+  &.page {
+    right: 1rem;
+  }
 }
-.slick-prev:before, .slick-next:before { font-family: "Roboto"; font-size: 10rem; font-weight: 100; line-height: 1; color: black !important; opacity: 1; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; }   
+.slick-prev:before, .slick-next:before { font-family: "Roboto"; font-size: 10rem; font-weight: 100; line-height: 1; 
+  color: black !important; opacity: 1; 
+  -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; }   
 
 .slick-prev:before { content: "‹"; }
 [dir="rtl"] .slick-prev:before { content: "›"; }
@@ -152,6 +162,8 @@
       height: 100px;
       margin: 0 0.5rem 0.5rem 0px;
       border: 2px solid #333;
+      position: relative;
+      display: inline-block;
       &.slick-active {
         border: 2px solid #999;
       }
