--- a/app/views/groups/index.html.haml
+++ b/app/views/groups/index.html.haml
@@ -3,12 +3,14 @@
 - @groups.each_with_index do |group,index|
   .row.group_container{class: @groups[index+1].nil? ? :last : false}
     - if index == 0
-      .medium-3.columns.right
-        .magellan-scrollnav
-          %div{:"data-magellan-expedition" => :fixed, :"data-options" => "threshold:100;destination_threshold:120;fixed_top:320" }
-            %dl.sub-nav.groups_list
+      .medium-3.columns.float-right
+        %div{:'data-sticky-container' => ''}
+          %nav#magellan.columns.sticky{:'data-sticky' => '', :'data-sticky-on' => 'large', :'data-margin-top' => 30}
+            %ul.vertical.menu{:"data-magellan" => ''} 
+              -# => "threshold:100;destination_threshold:120;fixed_top:320" }
               - @groups.each_with_index do |g, count|
                 %li= link_to (count + 1).to_s + ". " + g.name, '#', onclick: "scrollTo('a[name=#{g.id}]');return false;"
+                
     .columns.medium-offset-2.small-12{class: index == 0 ? "medium-7" : "medium-7"}
       %a{name: group.id }
       %h2= link_to group.name, group
