--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,17 +1,17 @@
 %footer{class: append}
   .drawer
-    .row
+    .row.expanded
       .text-center
         Supporters and partners
         -#= link_to 'Supporters and partners', '#' , onclick: "javascript:$('footer .rest').slideToggle();return false;"
   .arrow
-    .row
+    .row.expanded
       .text-center.down_arrow= link_to image_tag("selected_down#{append}.png"), '#', onclick: "javascript:$('footer .rest').slideToggle();return false;"
   .rest
-    .row.lined
+    .row.expanded.lined
       .text-center Nordic Cultural Event of the Year
       .small-centered.columns.small-10.text-center= link_to image_tag('norden.png'), 'http://www.nordiskkulturfond.org/'
-    .row.lined
+    .row.expanded.lined
       .text-center Partners
       .small-centered.columns.small-10.text-center
         = link_to image_tag('bioarts.jpg'), 'http://www.bioartsociety.fi/', target: :_blank
@@ -20,20 +20,21 @@
         = link_to image_tag('greenland.png'), 'http://kunsthallgrenland.no/', target: :_blank        
         = link_to image_tag('nikolaj.png'), 'http://www.nikolajkunsthal.dk/', target: :_blank
         = link_to image_tag('malmo.png'), 'http://www.mah.se/', target: :_blank  
-    .row
+    .row.expanded
       .text-center Supporters
-      .small-12.columns.partners.small-text-center 
+      .small-12.columns.partners.text-center 
         = image_tag('eu.png')
         = image_tag('cw.png')
         = image_tag('op.png')
         = image_tag('umu_logotyper.jpg')
+        = image_tag('logo_teak.png')
         %br/
         = image_tag('austrian.jpg')
         = image_tag('artsiceland.png')
         = image_tag('taike_vaaka_v2.png')
         
-  .row.contact_info
-    .row
+  .row.expanded.contact_info
+    .row.expanded
       .small-12.columns.text-center
         Contact
         %br/
