--- a/app/views/layouts/_forumbox.html.haml
+++ b/app/views/layouts/_forumbox.html.haml
@@ -1,5 +1,5 @@
 .heading.ui-draggable-handle
-  .left.text-left PROGRAMME
+  .float-left.text-left PROGRAMME
   .text-right NOV-DEC 2016
 .title_box.text-center
   .title= link_to 'HYBRID MATTERs at FORUM BOX', '/forumbox'
