--- a/app/views/pages/show.html.haml
+++ b/app/views/pages/show.html.haml
@@ -27,7 +27,8 @@
           arrows: true,
           slide: '.slide',
           adaptiveHeight: false,
-
+          prevArrow: '<button type="button" data-role="none" class="slick-prev slick-arrow" aria-label="Previous" role="button" style="display: inline-block;"></button>',
+          nextArrow: '<button type="button" data-role="none" class="slick-next page slick-arrow" aria-label="Next" role="button" style="display: inline-block;"></button>',
           dots: true,
           customPaging: function(slick,index) {
              return slick.$slides.eq(index).find('.thumb').html() ;
