--- a/app/views/posts/_post.html.haml
+++ b/app/views/posts/_post.html.haml
@@ -1,11 +1,11 @@
-.row
+.row.expanded
   .medium-2.columns.medium-offset-1.hide-for-small-only
     - if post.photos.empty?
       = link_to  image_tag('hm_logo.png'), post
     - else
       .front_icon= link_to image_tag(post.photos.first.image.url(:blog)), post
   .medium-9.small-12.columns
-    .row
+    .row.expanded
       .small-12.medium-9.columns.post_info.end.medium-offset-1
         .blue_heading
           = raw post.category
