--- a/app/assets/stylesheets/calls.css.scss
+++ b/app/assets/stylesheets/calls.css.scss
@@ -82,6 +82,7 @@
     padding-bottom: 0.2rem;
     line-height: 1.5rem;
     color: $turq;
+    font-weight: bold;
     border-bottom: 1px solid $turq;
   }
   .left_form {
