--- a/app/assets/stylesheets/field_notes.css.scss
+++ b/app/assets/stylesheets/field_notes.css.scss
@@ -69,7 +69,7 @@ nav.top-bar {
     margin-top: 0;
     ul.top-bar-menu {
       li {
-        span { color: transparent; text-transform: uppercase; }
+        span { color: transparent; text-transform: uppercase; font-size: 1rem;}
         
       }
     }
