--- a/app/views/admin/groups/index.html.haml
+++ b/app/views/admin/groups/index.html.haml
@@ -14,7 +14,9 @@
       %tbody
         - @groups.each do |group|
           %tr
-            %td= group.name
+            %td
+              = group.name
+              = link_to 'Export to CSV', admin_symposium_group_participants_path(@symposium, group), class: [:button, :small]
             %td= group.host
             %td= group.participants.size.to_s
             %td
