--- a/app/assets/stylesheets/investigations.css.scss
+++ b/app/assets/stylesheets/investigations.css.scss
@@ -121,7 +121,7 @@ footer._investigations {
           line-height: initial;
           margin-top: 10px;
         }
-        .secondary_nav_select {
+        .secondary_nav_select, .main_nav_select {
           margin-top: 28px;
         }
         .rest {
