--- a/app/assets/stylesheets/fn_mobile.css.scss
+++ b/app/assets/stylesheets/fn_mobile.css.scss
@@ -20,6 +20,9 @@
         .rest {
           width: 100%;
         }
+        .main_nav_select, .secondary_nav_select {
+          margin-top: 28px;
+        }
         ul.top-bar-menu {
           left: 0;
           padding-top: 0.2rem;
