--- a/app/views/layouts/exhibitions.html.haml
+++ b/app/views/layouts/exhibitions.html.haml
@@ -63,8 +63,8 @@
                 = link_to image_tag('icon_post.png', onmouseover: "this.src='#{image_path('icon_post_hover.png')}'", onmouseout: "this.src='#{image_path('icon_post.png')}'"), 'mailto:info@bioartsociety.fi', class: :maillink
               .rest
                 .row.show-for-small-only
-                  .small-6.columns.small-offset-1= render partial: 'layouts/dropdown'
-                  .small-5.columns
+                  = render partial: 'layouts/mobile_dropdown'
+                  .small-6.columns
                     %select.secondary_nav_select
                       / %option{selected: (controller.controller_name == 'pages' ? :selected : false), value: page_path('about-field-notes-hybrid-matters') } About
                       - if params[:place].nil?
