frontpage under way

--- a/app/assets/themes/bioart/stylesheets/_settings.scss
+++ b/app/assets/themes/bioart/stylesheets/_settings.scss
@@ -50,7 +50,7 @@ $global-font-size: 100%;
 $global-width: rem-calc(1200);
 $global-lineheight: 1.5;
 $foundation-palette: (
-  primary: #FFF,
+  primary: #ABA,
   secondary: #777,
   success: #3adb76,
   warning: #ffae00,
@@ -87,7 +87,7 @@ $breakpoints: (
   xxlarge: 1440px,
 );
 $print-breakpoint: large;
-$breakpoint-classes: (small medium large xlarge);
+$breakpoint-classes: (small medium large xlarge xxlarge);
 
 // 3. The Grid
 // -----------
