--- a/app/views/themes/bioart/layouts/application.html.haml
+++ b/app/views/themes/bioart/layouts/application.html.haml
@@ -10,7 +10,7 @@
     -#  %script{:src => "https://maps.googleapis.com/maps/api/js?key=#{Figaro.env.google_maps_api_key}", :type => "text/javascript"}
     = csrf_meta_tags
     %link{:href => "/posts.rss", :rel => "alternate", :title => "RSS", :type => "application/rss+xml"}/
-    %link{:href => "https://fonts.googleapis.com/css?family=Titillium+Web", :rel => "stylesheet", :type => "text/css"}/
+    %link{:href => "https://fonts.googleapis.com/css?family=Rubik|Titillium+Web|Abel", :rel => "stylesheet", :type => "text/css"}/
 
     :javascript
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -24,13 +24,11 @@
     %header
       .pattern
         .row
-          .logo.small-4.columns
+          .logo.medium-2.columns.small-12
             the
-            %br/
             BIOART
-            %br/
             SOCIETY
-          .title-bar.small-8.columns.end
+          .title-bar.medium-8.columns.small-12
             .title-bar-left
               %ul.horizontal.menu
                 %li= link_to 'News', posts_path
